feat: add `POST /api/v1/project` endpoint (#239)
